<resources>
    <string name="app_name">MockupEmisor</string>
    <string name="name_surname">Nombres y apellidos</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="social_notes">Regístrate con tus redes sociales</string>
    <string name="next">SIGUIENTE</string>
    <string name="registration">REGISTRO</string>
    <string name="login">ACCESO</string>
    <string name="help">Ayuda</string>
    <string name="mobile_regis">REGISTRA TU NÚMERO TELEFÓNICO</string>
    <string name="enter_your_code">INGRESA TU CÓDIGO</string>
    <string name="continue_">CONTINUAR</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="type_your_password">Digita tu contraseña \npara ingresar</string>
    <string name="login_to">Para iniciar sesión en Sefue \ningresa la contraseña con la que te registraste</string>
    <string name="we_carry_with_love">Lo llevamos con amor</string>
    <string name="your_is_the_best_hands">Tu mandado en las mejores manos</string>
    <string name="start">INICIAR</string>
    <string name="live_the_experience">Vive la experiencia \n¡Confía!</string>
    <string name="safe_and_fast">Tú mandado seguro y rápido, eso es felicidad.</string>
    <string name="you_are_the_part">Eres parte de la innovación \ny la eficiencia</string>
    <string name="whole_community">Toda una comunidad de viajeros a tu disposición.</string>
    <string name="are_you_win">"Ganas mandando! \nAhora... \nGanas llevando! "</string>
    <string name="safe_travller">Sé un viajero</string>
    <string name="safe_travller1">inscríbete aquí.</string>
    <string name="sefue"> SEFUE </string>
    <string name="what_you_send">"¿Y hoy qué vas a mandar? "</string>
    <string name="response">Disponibles 7x24</string>
    <string name="make_your_orders">HAZ TUS MANDADOS</string>
    <string name="create_your_errand">Crea tu mandado</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Configurar perfil</string>
    <string name="mi_profil">Mi perfil</string>
    <string name="about_sefue">Acerca de Sefue</string>
    <string name="terms_conditions">Términos y condiciones</string>
    <string name="idiom">Idioma</string>
    <string name="notifications">Notificaciones</string>
    <string name="sign_off">CERRAR SESIÓN</string>
    <string name="help_two">Mi mandado llegó en mal estado</string>
    <string name="help_one">Mi mandado no llegó a su destino</string>
    <string name="cupones">Cupones</string>
    <string name="cupones_text">Tienes un cupón disponible, con descuento.</string>
    <string name="payment_method">MÉTODOS DE PAGO</string>
    <string name="see_payment_method">Aquí puedes ver tus métodos de pago</string>
    <string name="add_payment_method">Añadir forma de pago</string>
    <string name="credit_debit">Tarjeta de crédito/débito</string>
    <string name="promotion">Promoción</string>
    <string name="cash">Efectivo</string>
    <string name="no_cupons_available">No tienes más cupones disponibles</string>
    <string name="dimension">DIMENSIONES DEL MANDADO</string>
    <string name="enter_dimension">Ingresa los datos del mandado \nque vamos a llevar.</string>
    <string name="alto">Alto</string>
    <string name="achho">Ancho</string>
    <string name="largo">Largo</string>
    <string name="peso">Peso</string>
    <string name="quantity">Piezas</string>
    <string name="order_details">DETALLES DEL MANDADO</string>
    <string name="enter_order_details">Ingresa los detalles del mandado \nque vamos a llevar</string>



    <string name="api_key">AIzaSyAXTJrvnDTC8AjYzK2dPatsSAMJaTIc-c0</string>


    <!-- Key for places and route draw -->
    <string name="place_api_key">AIzaSyC4Eg_qGdkZrcW-td6QsmJAk2g4nzPaat0</string>

    <string name="please_wait">Please wait...</string>
    <string name="network_failure">Sorry! Not connected to internet</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="phone_number">NÚMERO TELEFÓNICO</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="invalid_otp">Invalid otp</string>
    <string name="password_dont_matched">password doesn\'t matched</string>
    <string name="wrong_email">invalid email</string>
    <string name="update">actualizar</string>
    <string name="select_image_from">Seleccionar imagen de</string>
    <string name="camera">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="profile_upadte_successfully">actualizar correctamente</string>
    <string name="required">requerido</string>
    <string name="forgot_my_password">Olvidé mi contraseña</string>
    <string name="forgot_password2">Has olvidado tu contraseña</string>
    <string name="submit">enviar</string>
    <string name="please_check_your_email">Hemos enviado un enlace al correo electrónico para cambiar su contraseña, por favor revise su correo electrónico
</string>


    <string name="fb_login_protocol_scheme">fb2465870793657332</string>
    <string name="facebook_app_id">2465870793657332</string>
    <string name="address">Dirección</string>
    <string name="add">Agregar</string>
    <string name="please_select_document_type">Seleccione el tipo de documento</string>


    <string-array name="pick">
        <item>Tipo de documento</item>
    </string-array>

</resources>