<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10sdp"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/ic_welcome_four"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_win"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/color_black_light"
        android:fontFamily="@font/irc_demi"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginTop="@dimen/_10sdp"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safe_travller"
        android:gravity="center_horizontal"
        android:fontFamily="@font/irc_demi"
        android:textColor="#BDC2CC"
        android:textSize="@dimen/_11sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" SEFUE "
        android:gravity="center_horizontal"
        android:fontFamily="@font/sofachrome_italic"
        android:textColor="#BDC2CC"
        android:textSize="@dimen/_12sdp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safe_travller1"
        android:gravity="center_vertical"
        android:fontFamily="@font/irc_demi"
        android:textColor="#BDC2CC"
        android:textSize="@dimen/_11sdp"
        />





</LinearLayout>


</LinearLayout>