<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_password" />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_your_password"
                android:gravity="center_horizontal"
                android:fontFamily="@font/irc_demi"
                android:textColor="@color/color_black_light"
                android:textSize="@dimen/_16sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to"
                android:gravity="center_horizontal"
                android:fontFamily="@font/irc_demi"
                android:textColor="#BDC2CC"
                android:textSize="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"/>




            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:background="@drawable/rounded_white_gray_bg"
                android:fontFamily="@font/irc_demi"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12sdp" />


            <LinearLayout
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/irc_demi"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/color_blue"
                    android:textSize="@dimen/_12sdp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_blue"
                    />


            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/btnCountinue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                app:cardElevation="@dimen/_2sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_black_light"
                    android:fontFamily="@font/irc_demi"
                    android:gravity="center"
                    android:text="@string/continue_"
                    android:textColor="@color/color_btn"
                    android:textSize="@dimen/_12sdp" />


            </androidx.cardview.widget.CardView>


        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            app:cardCornerRadius="@dimen/_30sdp"
            app:cardElevation="@dimen/_2sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_btn"
                android:fontFamily="@font/irc_demi"
                android:gravity="center"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:text="@string/help"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12sdp" />


        </androidx.cardview.widget.CardView>


    </RelativeLayout>


</layout>