<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_two">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            app:cardCornerRadius="@dimen/_30sdp"
            app:cardElevation="@dimen/_2sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_btn"
                android:fontFamily="@font/irc_demi"
                android:gravity="center"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:text="@string/help"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12sdp" />


        </androidx.cardview.widget.CardView>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/irc_demi"
                android:gravity="center_horizontal"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                app:cardElevation="@dimen/_2sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/irc_demi"
                    android:hint="Correo electrónico"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12sdp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                app:cardElevation="@dimen/_2sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/irc_demi"
                    android:hint="@string/name_surname"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12sdp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                app:cardElevation="@dimen/_2sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/irc_demi"
                    android:hint="@string/password"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12sdp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                app:cardElevation="@dimen/_2sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/irc_demi"
                    android:hint="@string/repeat_password"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12sdp" />


            </androidx.cardview.widget.CardView>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/white" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/irc_demi"
                android:gravity="center_horizontal"
                android:text="@string/social_notes"
                android:textColor="@color/color_btn"
                android:textSize="@dimen/_14sdp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:weightSum="3">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">


                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_facebook" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">


                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_google" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">


                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_apple" />


                </LinearLayout>


            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                app:cardElevation="@dimen/_2sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_btn"
                    android:fontFamily="@font/irc_demi"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12sdp" />


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </RelativeLayout>

</layout>